# HyperDesktopDuplication

./: .gitignore  CHANGELOG.md  README.md
Assets/HDD/Scripts/: Example.cs  HDD_Manager.cs  HDD_Monitor.cs
Assets/Prefabs/: HDD_Manager.prefab  HDD_Monitor.prefab  Manager.prefab  Monitor.prefab
Assets/Scripts/: App.cs  Example.cs  HDD_Manager.cs  HDD_Monitor.cs  Shremdup.cs  ShremdupGrpc.cs
backend/: Cargo.toml  README.md  build.rs
backend/src/: duplicate_context.rs  handler.rs  main.rs  manager.rs  model.rs  route.rs  server.rs
backend/src/manager/: duplicate_context.rs  duplicate_output.rs
backend/src/server/: handler.rs  route.rs
frontend/: App.cs  Model.cs
proto/: hdd.proto
