[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
rusty-duplication = { path = "../../rusty-duplication" }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
warp = "0.3"
windows = { version = "0.48.0", features = ["Win32_Graphics_Dxgi", "Win32_Foundation", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi"] }
