[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
rusty-duplication = { path = "../../rusty-duplication" }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.48.0", features = ["Win32_Graphics_Dxgi", "Win32_Foundation", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi"] }
tonic = "0.9"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"